--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ body::before {
   position: absolute;
   top: 40%;
   /* Moved slightly higher */
-  width: 150px;
+  width: 30%;
   /* Adjust size as needed */
   height: auto;
   /* Maintain aspect ratio */
