--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ body::before {
   max-width: 400px;
   /* Max width for larger screens */
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(0px, -25%);
   /* Center horizontally */
 }
 
@@ -121,7 +121,7 @@ body::before {
   height: auto;
   /* Maintain aspect ratio */
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(0px, 0%);
   /* Center horizontally */
 }
 
@@ -135,6 +135,6 @@ body::before {
   max-width: 300px;
   /* Max width for larger screens */
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(0px, 25%);
   /* Center horizontally */
 }
